fixed seattle and bellevue spacing

--- a/resources/scss/blocks/quote.scss
+++ b/resources/scss/blocks/quote.scss
@@ -9,6 +9,19 @@
         .left-quote{
             display: inline-block;
             width: 100px;
+            position: relative;
+            .quote-icon{
+                position: relative;
+                top: 0px;
+                left: 0px;
+                width: 100px;
+                animation: swing ease-in-out 1s infinite alternate;
+                transform-origin: center -20px;
+                svg{
+                    fill: black;
+                }
+            }
+            
         }
         blockquote, blockquote p{
             font-size: 1.5rem;
